almost all done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
       <section id="playground">
       </section>
+      <section id="gameOver">
+      </section>
     </body>
     <script src="/js/constants.js"></script>
     <script src="/js/initial_values.js"></script>
