--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
+        <h1 id="scoreboard">0</h1>
       <section id="playground">
-      </section>
-      <section id="gameOver">
       </section>
     </body>
     <script src="/js/constants.js"></script>
