some small modifications

--- a/game_over.html
+++ b/game_over.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="https://www.favicon.cc/logo3d/906943.png">
         <meta charset="UTF-8">
         <title>Game Over</title>
         <link rel="stylesheet" href="/css/game_over.css">
     </head>
     <body>
+     <iframe width="0" height="0" src = "https://www.youtube.com/watch?v=9Fv5cuYZFC0"></iframe>
         <section id = "to_do">
         </section>
      <a href="index.html"><h2 style = "background: darkred; color:white; position: center">RESTART THE GAME!</h2></a>
