--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="https://www.favicon.cc/logo3d/906943.png">
         <meta charset="UTF-8">
         <title>Tetris Game</title>
         <link rel="stylesheet" href="/css/styles.css">
