music gameOver added

--- a/game_over.html
+++ b/game_over.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/game_over.css">
     </head>
     <body>
-     <iframe width="0" height="0" src = "https://www.youtube.com/watch?v=9Fv5cuYZFC0"></iframe>
+     <embed src="audio/06_Game%20Over.mp3" autoplay="true" hidden="true" />
         <section id = "to_do">
         </section>
      <a href="index.html"><h2 style = "background: darkred; color:white; position: center">RESTART THE GAME!</h2></a>
